--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
 	<div><button id="calculate">Calculate</button></div>
 	<div>NOTE: discounts of 10% are given to orders over $250</div>
 
-	<script>
+	<script> 
+	/*
+	 * Name: Yu Ting Lin (Tina)
+	 * Student Number: A00915459
+	 * Assignment: MDIA 2294 Assignment 1
+	 */
 
 		/* Brief steps to start
 			1. store the button in a variable, then add an event listener to it. Add a function and console.log it to make sure when the button is clicked, the function will run.
